fix:Fix the height on the work section and align well on the mobile viewport

--- a/css/main.css
+++ b/css/main.css
@@ -159,7 +159,8 @@
 
 .inner-work {
   flex-direction: column;
-  background-image: linear-gradient(to top, rgba(0, 0, 0, 0.52), rgba(0, 0, 0, 0.73)),
+  background-image:
+    linear-gradient(to top, rgba(0, 0, 0, 0.52), rgba(0, 0, 0, 0.73)),
     url(../svg/professional.svg);
   background-position: center;
   background-repeat: no-repeat;
